--- a/ExCoreService/ExCoreService.csproj
+++ b/ExCoreService/ExCoreService.csproj
@@ -33,7 +33,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Camstar.Exceptions">
+      <HintPath>D:\3. OPCENTER\NEW FOR WCF\Camstar.Exceptions.dll</HintPath>
+    </Reference>
+    <Reference Include="Camstar.Util">
+      <HintPath>D:\3. OPCENTER\NEW FOR WCF\Camstar.Util.dll</HintPath>
+    </Reference>
+    <Reference Include="Camstar.WCFClient">
+      <HintPath>D:\3. OPCENTER\NEW FOR WCF\Camstar.WCFClient.dll</HintPath>
+    </Reference>
+    <Reference Include="Camstar.WCFClientBase">
+      <HintPath>D:\3. OPCENTER\NEW FOR WCF\Camstar.WCFClientBase.dll</HintPath>
+    </Reference>
+    <Reference Include="InSiteXMLClient">
+      <HintPath>D:\3. OPCENTER\NEW FOR WCF\InSiteXMLClient.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -53,8 +69,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppSettings.cs" />
+    <Compile Include="EventLogUtil.cs" />
+    <Compile Include="ProcessFiles.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceUtil.cs" />
+    <Compile Include="Simple3Des.cs" />
     <Compile Include="StreamFile.cs" />
   </ItemGroup>
   <ItemGroup>
