--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -4,6 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<appSettings>
+		<!-- Timer Polling Interval -->
+		<add key="TimerPollingInterval" value="1000"/>
+		
 		<!-- ExCore Connection Settings -->
 		<add key="UTCOffset" value="08:00:00" />
 		<add key="ExCoreHost" value="EXCR86MIO40" />
@@ -11,15 +14,26 @@
 		<add key="ExCoreUsername" value="Administrator" />
 		<add key="ExCorePasswordkey" value="ExCoreKey" />
 		<add key="ExCorePassword" value="uFlZ/eG69mA5BooouzUciIy1Cyrgzdnp" />
-		<!-- Put your real password in here -->
-		<add key="ExCorePasswordReal" value="Your Password Portal" />
-
-		<add key="SourceFolder" value="C:\Temp\ExCoreService\SourceFiles" />
-		<add key="CompletedFolder" value="C:\Temp\ExCoreService\CompletedFiles" />
-		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles" />
 
 		<!-- Trace Level setting (higher level includes lower levels). -->
 		<add key="TraceLevel" value="6" />
+		
+		<!-- File Processing Folders -->
+		<add key="SourceUNCPath" value=""/>
+		<add key="SourceUNCPathUsername" value=""/>
+		<add key="SourceUNCPathPassword" value=""/>
+		<add key="SourceFolder" value="C:\Temp\ExCoreService\SourceFiles" />
+
+		<add key="CompletedUNCPath" value=""/>
+		<add key="CompletedUNCPathUsername" value=""/>
+		<add key="CompletedUNCPathPassword" value=""/>
+		<add key="CompletedFolder" value="C:\Temp\ExCoreService\CompletedFiles" />
+
+		<add key="ErrorUNCPath" value=""/>
+		<add key="ErrorUNCPathUsername" value=""/>
+		<add key="ErrorUNCPathPassword" value=""/>
+		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles" />
+
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
