Fixing Some Bug

--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -8,7 +8,7 @@
 		<add key="TimerPollingInterval" value="1000"/>
 		
 		<!-- ExCore Connection Settings -->
-		<add key="UTCOffset" value="08:00:00" />
+		<add key="UTCOffset" value="07:00:00" />
 		<add key="ExCoreHost" value="EXCR86MIO40" />
 		<add key="ExCorePort" value="443" />
 		<add key="ExCoreUsername" value="Administrator" />
@@ -33,6 +33,9 @@
 		<add key="ErrorUNCPathUsername" value=""/>
 		<add key="ErrorUNCPathPassword" value=""/>
 		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles" />
+
+		<add key="Resource" value="BW01-NM1-LS"/>
+		<add key="Workflow" value="Minime Workflow"/>
 
 	</appSettings>
 	<system.serviceModel>
