--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -37,6 +37,13 @@
 		<add key="Resource" value="BW01-NM1-LS"/>
 		<add key="Workflow" value="Minime Workflow"/>
 
+		<add key="ERPRouteMinime" value="Minime Flow"/>
+		<add key="RouteStepMinime" value="Backend Minime"/>
+		<add key="ERPRouteAriel" value="Ariel Flow"/>
+		<add key="RouteStepAriel" value="Backend Ariel"/>
+		<add key="HeadAssy" value="Head Assy Flow"/>
+		<add key="RouteHeadAssy" value="Head Assy"/>
+
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
