Add Service Mode

--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -35,6 +35,8 @@
 		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles" />
 
 		<add key="Workflow" value="Minime Workflow"/>
+		<!-- Services mode can be: MfgOrder, OrderBOM, MasterProduct-->
+		<add key ="ServicesMode" value="OrderBOM"/>
 
 	</appSettings>
 	<system.serviceModel>
