BETA: Using Lot and Stock Point

--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -37,6 +37,8 @@
 		<add key="Workflow" value="Minime Workflow"/>
 		<!-- Services mode can be: MfgOrder, OrderBOM, MasterProduct-->
 		<add key ="ServicesMode" value="OrderBOM"/>
+		<add key ="DefaultUOM" value="Unit"/>
+		<add key ="DefaultInventoryLocation" value="Warehouse"/>
 
 	</appSettings>
 	<system.serviceModel>
