Fixing some Services

--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -39,6 +39,7 @@
 		<add key ="ServicesMode" value="OrderBOM"/>
 		<add key ="DefaultUOM" value="Unit"/>
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
+		<add key ="DefaultOrderStatus" value="Released"/>
 
 	</appSettings>
 	<system.serviceModel>
