--- a/ExCoreService/App.config
+++ b/ExCoreService/App.config
@@ -19,24 +19,38 @@
 		<add key="TraceLevel" value="6" />
 		
 		<!-- File Processing Folders -->
-		<add key="SourceUNCPath" value=""/>
-		<add key="SourceUNCPathUsername" value=""/>
-		<add key="SourceUNCPathPassword" value=""/>
-		<add key="SourceFolder" value="C:\Temp\ExCoreService\SourceFiles" />
+		<add key="OrderSourceUNCPath" value=""/>
+		<add key="OrderSourceUNCPathUsername" value=""/>
+		<add key="OrderSourceUNCPathPassword" value=""/>
+		<add key="OrderSourceFolder" value="C:\Temp\ExCoreService\Order\SourceFiles" />
 
-		<add key="CompletedUNCPath" value=""/>
-		<add key="CompletedUNCPathUsername" value=""/>
-		<add key="CompletedUNCPathPassword" value=""/>
-		<add key="CompletedFolder" value="C:\Temp\ExCoreService\CompletedFiles" />
+		<add key="OrderBOMSourceUNCPath" value=""/>
+		<add key="OrderBOMSourceUNCPathUsername" value=""/>
+		<add key="OrderBOMSourceUNCPathPassword" value=""/>
+		<add key="OrderBOMSourceFolder" value="C:\Temp\ExCoreService\OrderBOM\SourceFiles" />
 
-		<add key="ErrorUNCPath" value=""/>
-		<add key="ErrorUNCPathUsername" value=""/>
-		<add key="ErrorUNCPathPassword" value=""/>
-		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles" />
+		<add key="OrderCompletedUNCPath" value=""/>
+		<add key="OrderCompletedUNCPathUsername" value=""/>
+		<add key="OrderCompletedUNCPathPassword" value=""/>
+		<add key="OrderCompletedFolder" value="C:\Temp\ExCoreService\Order\CompletedFiles" />
+
+		<add key="OrderBOMCompletedUNCPath" value=""/>
+		<add key="OrderBOMCompletedUNCPathUsername" value=""/>
+		<add key="OrderBOMCompletedUNCPathPassword" value=""/>
+		<add key="OrderBOMCompletedFolder" value="C:\Temp\ExCoreService\OrderBOM\CompletedFiles" />
+
+		<add key="OrderErrorUNCPath" value=""/>
+		<add key="OrderErrorUNCPathUsername" value=""/>
+		<add key="OrderErrorUNCPathPassword" value=""/>
+		<add key="OrderErrorFolder" value="C:\Temp\ExCoreService\Order\ErrorFiles" />
+
+		<add key="OrderBOMErrorUNCPath" value=""/>
+		<add key="OrderBOMErrorUNCPathUsername" value=""/>
+		<add key="OrderBOMErrorUNCPathPassword" value=""/>
+		<add key="OrderBOMErrorFolder" value="C:\Temp\ExCoreService\OrderBOM\ErrorFiles" />
 
 		<add key="Workflow" value="Minime Workflow"/>
-		<!-- Services mode can be: MfgOrder, OrderBOM, MasterProduct-->
-		<add key ="ServicesMode" value="OrderBOM"/>
+		
 		<add key ="DefaultUOM" value="Unit"/>
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
 		<add key ="DefaultOrderStatus" value="Released"/>
