add: validation field and configuration field

--- a/ExCoreServiceProductMaster/App.config
+++ b/ExCoreServiceProductMaster/App.config
@@ -5,7 +5,7 @@
 	</startup>
 	<appSettings>
 		<!-- Timer Polling Interval -->
-		<add key="TimerPollingInterval" value="1000"/>
+		<add key="TimerPollingInterval" value="5000"/>
 
 		<!-- ExCore Connection Settings -->
 		<add key="UTCOffset" value="07:00:00" />
@@ -40,6 +40,11 @@
 		<add key ="DefaultUOM" value="Unit"/>
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
 		<add key ="DefaultOrderStatus" value="Released"/>
+
+		<add key ="LengthCSV" value="2"/>
+		<add key ="PO" value="0"/>
+		<add key ="Description" value="1"/>
+		<add key ="ProductType" value="2"/>
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
