--- a/ExCoreServiceOrder/App.config
+++ b/ExCoreServiceOrder/App.config
@@ -5,7 +5,7 @@
 	</startup>
 	<appSettings>
 		<!-- Timer Polling Interval -->
-		<add key="TimerPollingInterval" value="1000"/>
+		<add key="TimerPollingInterval" value="5000"/>
 
 		<!-- ExCore Connection Settings -->
 		<add key="UTCOffset" value="07:00:00" />
@@ -40,6 +40,13 @@
 		<add key ="DefaultUOM" value="Unit"/>
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
 		<add key ="DefaultOrderStatus" value="Released"/>
+	
+		<add key ="LengthCSV" value="9"/>
+		<add key ="PO" value="0"/>
+		<add key ="Product" value="1"/>
+		<add key ="Qty" value="6"/>
+		<add key ="StartTime" value="8"/>
+		<add key ="EndTime" value="9"/>
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
