--- a/ExCoreServiceOrderBOM/ExCoreServiceOrderBOM.csproj
+++ b/ExCoreServiceOrderBOM/ExCoreServiceOrderBOM.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\lib\OpcenterWikLibrary.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
