beta: final production order

--- a/ExCoreServiceOrder/App.config
+++ b/ExCoreServiceOrder/App.config
@@ -39,14 +39,22 @@
 
 		<add key ="DefaultUOM" value="Unit"/>
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
-		<add key ="DefaultOrderStatus" value="Released"/>
+		<add key ="DefaultOrderStatus" value="REL"/>
 	
-		<add key ="LengthCSV" value="9"/>
-		<add key ="PO" value="0"/>
-		<add key ="Product" value="1"/>
-		<add key ="Qty" value="6"/>
-		<add key ="StartTime" value="8"/>
-		<add key ="EndTime" value="9"/>
+		<add key ="LengthCSV" value="13"/>
+		<add key ="WorkCenter" value="0"/>
+		<add key ="Order" value="1"/>
+		<add key ="Material" value="2"/>
+		<add key ="OrderType" value="4"/>
+		<add key ="TargetQty" value="7"/>
+		<add key ="StartTime" value="11"/>
+		<add key ="EndTime" value="12"/>
+		<add key ="SystemStatus" value="13"/>
+
+		<add key ="FilterOrderType" value="ZP"/>
+		<add key ="FilterWorkCenter" value="BW01-NM1,BW01-NM2,BW01-NM3,BW01-NM4,BW01-NM5,BW01-NA1,BW01-NA2,BW01-NA3,BW01-NA4"/>
+		<add key ="FilterSystemStatus" value="REL,CRTD"/>
+		
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
