--- a/ExCoreServiceOrder/ExCoreServiceOrder.csproj
+++ b/ExCoreServiceOrder/ExCoreServiceOrder.csproj
@@ -98,6 +98,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="Production Order &amp; Plan Order 01-25-2022.csv" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
