--- a/ExCoreServiceOrder/App.config
+++ b/ExCoreServiceOrder/App.config
@@ -34,6 +34,16 @@
 		<add key="ErrorUNCPathPassword" value=""/>
 		<add key="ErrorFolder" value="C:\Temp\ExCoreService\Order\ErrorFiles" />
 
+		<add key="QueueUNCPath" value=""/>
+		<add key="QueueUNCPathUsername" value=""/>
+		<add key="QueueUNCPathPassword" value=""/>
+		<add key="QueueFolder" value="C:\Temp\ExCoreService\Order\QueueFiles" />
+
+		<add key="ReferenceUNCPath" value=""/>
+		<add key="ReferenceUNCPathUsername" value=""/>
+		<add key="ReferenceUNCPathPassword" value=""/>
+		<add key="ReferenceFolder" value=""/>
+
 		<add key="Resource" value="BW01-NM1-LS"/>
 		<add key="Line" value="BW01-NM1"/>
 
