--- a/ExCoreServiceProductMaster/App.config
+++ b/ExCoreServiceProductMaster/App.config
@@ -34,6 +34,16 @@
 		<add key="ErrorUNCPathPassword" value=""/>
 		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ProductMaster\ErrorFiles" />
 
+		<add key="QueueUNCPath" value=""/>
+		<add key="QueueUNCPathUsername" value=""/>
+		<add key="QueueUNCPathPassword" value=""/>
+		<add key="QueueFolder" value="C:\Temp\ExCoreService\ProductMaster\QueueFiles" />
+
+		<add key="ReferenceUNCPath" value=""/>
+		<add key="ReferenceUNCPathUsername" value=""/>
+		<add key="ReferenceUNCPathPassword" value=""/>
+		<add key="ReferenceFolder" value=""/>
+
 		<add key="Resource" value="BW01-NM1-LS"/>
 		<add key="Line" value="BW01-NM1"/>
 
@@ -41,10 +51,15 @@
 		<add key ="DefaultInventoryLocation" value="Warehouse"/>
 		<add key ="DefaultOrderStatus" value="Released"/>
 
-		<add key ="LengthCSV" value="2"/>
-		<add key ="PO" value="0"/>
+		<add key ="LengthCSV" value="6"/>
+		<add key ="Product" value="0"/>
 		<add key ="Description" value="1"/>
-		<add key ="ProductType" value="2"/>
+		<add key ="Procurement" value="2"/>
+		<add key ="UOM" value="3"/>
+		<add key ="ProductType" value="4"/>
+		<add key ="ProductFamily" value="5"/>
+		<add key ="ProductFamilyDescription" value="6"/>
+		
 	</appSettings>
 	<system.serviceModel>
 		<protocolMapping>
@@ -125,11 +140,11 @@
 		</services>
 	</system.serviceModel>
 	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
