--- a/lib/OpcenterWikLibrary.dll.config
+++ b/lib/OpcenterWikLibrary.dll.config
@@ -33,6 +33,17 @@
 		<add key="ErrorUNCPathUsername" value=""/>
 		<add key="ErrorUNCPathPassword" value=""/>
 		<add key="ErrorFolder" value="C:\Temp\ExCoreService\ErrorFiles"/>
+		
+		<add key="QueueUNCPathUsername" value=""/>
+		<add key="QueueUNCPath" value=""/>
+		<add key="QueueUNCPathPassword" value=""/>
+		<add key="QueueFolder" value="C:\Temp\ExCoreService\QueueFiles"/>
+		
+		<!-- File Processing Folders -->
+		<add key="ReferenceUNCPath" value=""/>
+		<add key="ReferenceUNCPathUsername" value=""/>
+		<add key="ReferenceUNCPathPassword" value=""/>
+		<add key="ReferenceFolder" value="C:\Temp\ExCoreService\SourceFiles"/>
 
 		<add key="Resource" value="BW01-NM1-LS"/>
 		<add key="Line" value="BW01-NM1"/>
