--- a/ExCoreServiceOrderBOM/ExCoreServiceOrderBOM.csproj
+++ b/ExCoreServiceOrderBOM/ExCoreServiceOrderBOM.csproj
@@ -83,6 +83,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="ZASMES007.CSV" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
