:tada: final deployment

--- a/ExCoreServiceOrder/ExCoreServiceOrder.csproj
+++ b/ExCoreServiceOrder/ExCoreServiceOrder.csproj
@@ -123,8 +123,14 @@
     <None Include="Endpoints.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="InstallService.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Production Order &amp; Plan Order 01-25-2022.csv" />
+    <None Include="UninstallService.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
