--- a/ExCoreServiceProductMaster/ExCoreServiceProductMaster.csproj
+++ b/ExCoreServiceProductMaster/ExCoreServiceProductMaster.csproj
@@ -114,8 +114,14 @@
     <None Include="Endpoints.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="InstallService.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Product Master.csv" />
+    <None Include="UninstallService.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
